# app/controllers/accounts_controller.rb
@@ -1,0 +1,8 @@
+# frozen_string_literal: true
+# AccountsController
+class AccountsController < ApplicationController
+  def show
+    @account = Account.find(params[:id])
+    render json: @account
+  end
+end
